tests/type-errors/expr_control_fold_bad_type.arl
archetype expr_control_match_loop_left_bad_type

variable res : nat = 0

entry exec () {
  var p : nat = 0;
  res := fold(p, x -> right<nat>(1));
}
